Migrate to Mongo kotlin client